increase cull timeout to 1hr, and enable gui configurator

--- a/roles/tljh/tasks/main.yml
+++ b/roles/tljh/tasks/main.yml
@@ -44,6 +44,8 @@
     - tljh-config set auth.type nativeauthenticator.NativeAuthenticator
     - tljh-config set limits.memory 24G
     - tljh-config set limits.cpu 4
+    - tljh-config set services.cull.timeout 3600
+    - tljh-config set services.configurator.enabled True
     - tljh-config reload
 
 - name: Create /usr/local/etc/jupyter
