remove unattended upgrades package, set a cloud config option to update+upgrade on boot

--- a/roles/dependencies/tasks/main.yml
+++ b/roles/dependencies/tasks/main.yml
@@ -1,5 +1,12 @@
 ---
 
+- name: Remove unattended-upgrades
+  become: true
+  apt:
+    name: unattended-upgrades
+    state: absent
+    update_cache: yes
+
 - name: Upgrade all packages
   become: true
   apt:
@@ -55,3 +62,12 @@
 - name: Reboot
   become: true
   reboot:
+
+- name: Enable auto updates/upgrades on boot via cloud-init
+  become: true
+  copy:
+    dest: /etc/cloud/cloud.cfg.d/apt-upgrades.cfg
+    content: |
+      #cloud-config
+      package_update: true
+      package_upgrade: true
