don't reboot or try to activate quotas when running on localhost

--- a/roles/quota/tasks/main.yml
+++ b/roles/quota/tasks/main.yml
@@ -25,6 +25,7 @@
 
 - name: Initialise quotas
   become: true
+  when: ansible_connection != "local"
   shell: "{{ item }}"
   with_items:
     - mount -o remount /
