--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,9 @@
 ---
 
 - name: Build TLJH server
-  hosts: default
+  hosts:
+    - default
+    - localhost
   gather_facts: true
   become: false
 
