--- a/roles/dependencies/tasks/main.yml
+++ b/roles/dependencies/tasks/main.yml
@@ -61,6 +61,7 @@
 
 - name: Reboot
   become: true
+  when: ansible_connection != "local"
   reboot:
 
 - name: Enable auto updates/upgrades on boot via cloud-init
