--- a/roles/quota/tasks/main.yml
+++ b/roles/quota/tasks/main.yml
@@ -23,6 +23,20 @@
     state: mounted
   register: fstab
 
+- name: Create default quota user
+  become: true
+  user:
+    name: quotauser
+    create_home: no
+    system: yes
+
+- name: Ensure new users adopt default quota
+  become: true
+  lineinfile:
+    path: /etc/adduser.conf
+    line: QUOTAUSER="quotauser"
+    regexp: ^QUOTAUSER=
+
 - name: Initialise quotas
   become: true
   when: ansible_connection != "local"
@@ -31,21 +45,4 @@
     - mount -o remount /
     - quotacheck -cvugm /
     - quotaon -vug /
-
-- name: Create default quota user
-  become: true
-  user:
-    name: quotauser
-    create_home: no
-    system: yes
-
-- name: Set default quota
-  become: true
-  shell: setquota -u quotauser 2G 2G 0 0 /
-
-- name: Ensure new users adopt default quota
-  become: true
-  lineinfile:
-    path: /etc/adduser.conf
-    line: QUOTAUSER="quotauser"
-    regexp: ^QUOTAUSER=
+    - setquota -u quotauser 2G 2G 0 0 /
