--- a/roles/dependencies/tasks/main.yml
+++ b/roles/dependencies/tasks/main.yml
@@ -13,6 +13,11 @@
     name: '*'
     state: latest
     update_cache: yes
+  register: apt_action
+  retries: 100
+  delay: 10
+  until: apt_action is success or ('Failed to lock apt for exclusive operation' not in apt_action.msg and '/var/lib/dpkg/lock' not in apt_action.msg)
+  # Note: https://saveriomiroddi.github.io/Handling-the-apt-lock-on-ubuntu-server-installations/
 
 - name: Install dependencies
   become: true
