--- a/roles/quota/tasks/main.yml
+++ b/roles/quota/tasks/main.yml
@@ -62,10 +62,10 @@
       mount -o remount /
       quotaoff /
       quotacheck -cvugm /
-      quotaon -vug /
-      errcode=$?
+      errcode=0
+      quotaon -vug / || errcode=1
       if [ "$errcode" != 0 ]; then
-        echo "You may need to reboot the system to load the quota kernel modules"
+        echo 'You may need to reboot the system to load the quota kernel modules ("sudo reboot")'
         exit 1
       fi
       setquota -u quotauser 2G 2G 0 0 /
@@ -77,7 +77,7 @@
     dest: /etc/profile.d/start-quota.sh
     mode: '0644'
     content: |
-      if [ "$(quotaon -p / | grep 'user quota' | grep 'is on')" == "" && "$(groups | grep jupyterhub-admins)" != "" ]; then
+      if [ "$(quotaon -p / | grep 'user quota' | grep 'is on')" == "" ] && [ "$(groups | grep jupyterhub-admins)" != "" ]; then
         cat <<-EOF
         Disk quotas are currently off. To turn them on use "sudo start-quota".
         Note: you may need to reboot the system first to enable the quota kernel modules (use "sudo reboot").
