--- a/roles/quota/tasks/main.yml
+++ b/roles/quota/tasks/main.yml
@@ -47,40 +47,18 @@
     - quotaon -vug /
     - setquota -u quotauser 2G 2G 0 0 /
 
-- name: Enable auto updates/upgrades on boot via cloud-init
+- name: Add start-quota script to /usr/local/bin/
   become: true
   when: ansible_connection == "local"
   copy:
+    src: start-quota.sh
     dest: /usr/local/bin/start-quota
     mode: '0755'
-    content: |
-      #!/bin/bash -e
-      if [ "$EUID" -ne 0 ]; then
-        echo "ERROR: please run as root"
-        exit 1
-      fi
-      mount -o remount /
-      quotaoff /
-      quotacheck -cvugm /
-      errcode=0
-      quotaon -vug / || errcode=1
-      if [ "$errcode" != 0 ]; then
-        echo 'You may need to reboot the system to load the quota kernel modules ("sudo reboot")'
-        exit 1
-      fi
-      setquota -u quotauser 2G 2G 0 0 /
 
 - name: Tell user how to activate quota on login, if not active
   become: true
   when: ansible_connection == "local"
   copy:
-    dest: /etc/profile.d/start-quota.sh
+    src: quota-msg.sh
+    dest: /etc/profile.d/quota-msg.sh
     mode: '0644'
-    content: |
-      if [ "$(quotaon -p / | grep 'user quota' | grep 'is on')" == "" ] && [ "$(groups | grep jupyterhub-admins)" != "" ]; then
-        cat <<-EOF
-        Disk quotas are currently off. To turn them on use "sudo start-quota".
-        Note: you may need to reboot the system first to enable the quota kernel modules (use "sudo reboot").
-
-      EOF
-      fi
