automatically start quotas when jupyterhub service starts

--- a/roles/tljh/tasks/main.yml
+++ b/roles/tljh/tasks/main.yml
@@ -27,6 +27,7 @@
       PrivateDevices=no
       ProtectKernelTunables=no
       ProtectKernelModules=no
+      ExecStartPost=/usr/local/bin/start-quota
 
 - name: Reload jupyterhub service
   become: true
